--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorios</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <h1>Laboratorios</h1>
     <p>Bienvenido a la página principal de los laboratorios.</p>
     <a href="LAB2/">Laboratorio 2</a>
+    <a href="LAB3/">Laboratorio 3</a>
 </body>
 </html>
