--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Bienvenido a la página principal de los laboratorios.</p>
     <a href="LAB2/">Laboratorio 2</a>
     <a href="LAB3/">Laboratorio 3</a>
+    <a href="LAB4/">Laboratorio 4</a>
 </body>
 </html>
