--- a/LAB3/Cursos.html
+++ b/LAB3/Cursos.html
@@ -15,16 +15,20 @@
       <ul class="nav-list">
         <li class="menu-item"><a href="index.html">Inicio</a></li>
         <li class="menu-item"><a href="cursos.html">Cursos</a></li>
-        <li class="menu-item"><a href="#">Contacto</a></li>
-        <li class="menu-item"><a href="#">Ayuda</a></li>
+        <li class="menu-item"><a href="contacto.html">Contacto</a></li>
+        <li class="menu-item"><a href="ayuda.html">Ayuda</a></li>
       </ul>
     </nav>
   </header>
  
   Producto
   <form action="">
-    <input type="text" placeholder="Nombre del producto" class="form-input">
-    <input type="number" placeholder="Precio" class="form-input">
+    <div class="form-group">
+      <input type="text" placeholder="Nombre del producto" class="form-input">
+    <div>
+      <div class="form-group">
+      <input type="number" placeholder="Precio" class="form-input">
     <button type="submit" class="submit-button">Agregar</button>
+  </form>
 </body>
 </html>
